Project/Observabality_Project/cloud-observability-app/kubertenes_config/logging_config/logging-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logging-ingress
  namespace: logging
  annotations:
    alb.ingress.kubernetes.io/group.name: observability-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.order: "1"        # ← higher priority than app
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /kibana
            pathType: Prefix
            backend:
              service:
                name: kibana-kibana
                port:
                  number: 5601    # service port
